@@ -9,8 +9,10 @@ import org.clever.quant.TradeLog;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
-import java.util.ArrayList;
-import java.util.List;
+import java.util.*;
+import java.util.concurrent.locks.ReadWriteLock;
+import java.util.concurrent.locks.ReentrantReadWriteLock;
+import java.util.function.Supplier;
 
 /**
  * 作者：lizw <br/>
@@ -20,6 +22,10 @@ import java.util.List;
 public abstract class AbstractAccount implements Account {
     protected final transient Logger log = LoggerFactory.getLogger(getClass());
     /**
+     * 账户操作锁
+     */
+    protected final ReadWriteLock lock = new ReentrantReadWriteLock(true);
+    /**
      * 账户名
      */
     protected final String name;
@@ -28,9 +34,13 @@ public abstract class AbstractAccount implements Account {
      */
     protected final double totalAmount;
     /**
-     * 持仓状态
+     * 账户余额
      */
-    protected final List<Position> positions = new ArrayList<>();
+    protected volatile double balance;
+    /**
+     * 持仓状态 {@code Map<code, Position>}
+     */
+    protected final Map<String, Position> positions = new HashMap<>();
     /**
      * 所有的历史交易日志
      */
@@ -44,20 +54,51 @@ public abstract class AbstractAccount implements Account {
         Assert.isTrue(totalAmount > 0, "参数 totalAmount 必须大于等于0");
         this.name = name == null ? getClass().getSimpleName() : name;
         this.totalAmount = totalAmount;
+        this.balance = totalAmount;
     }
 
     @Override
     public double getBalance() {
-        return 0;
+        return balance;
     }
 
     @Override
     public List<TradeLog> getTradeLogs() {
-        return List.of();
+        return syncRead(() -> Collections.unmodifiableList(tradeLogs));
     }
 
     @Override
     public TradeAccountSnapshot getSnapshot() {
-        return TradeAccountSnapshot.builder().build();
+        return syncRead(() -> TradeAccountSnapshot.builder()
+            .positions(Collections.unmodifiableMap(positions))
+            .balance(getBalance())
+            .build()
+        );
+    }
+
+    /**
+     * 同步多次读取
+     */
+    public <T> T syncRead(Supplier<T> sync) {
+        Assert.notNull(sync, "参数 sync 不能为 null");
+        lock.readLock().lock();
+        try {
+            return sync.get();
+        } finally {
+            lock.readLock().unlock();
+        }
+    }
+
+    /**
+     * 同步多次写数据
+     */
+    public <T> T syncWrite(Supplier<T> sync) {
+        Assert.notNull(sync, "参数 sync 不能为 null");
+        lock.writeLock().lock();
+        try {
+            return sync.get();
+        } finally {
+            lock.writeLock().unlock();
+        }
     }
 }
